# pymummer

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  README.md  env_osx64.yml  environment.yml  install_dependencies.sh  pyproject.toml  setup.py
pymummer/: __init__.py  alignment.py  coords_file.py  mummer.py  nucmer.py  snp.py  snp_file.py  syscall.py  variant.py
pymummer/tests/: alignment_test.py  coords_file_test.py  mummer_test.py  nucmer_test.py  snp_file_test.py  snp_test.py  variant_test.py
pymummer/tests/data/: coords_file_test_convert_to_msp_crunch.coords  coords_file_test_convert_to_msp_crunch.qry.fa.fai  coords_file_test_convert_to_msp_crunch.ref.fa  coords_file_test_convert_to_msp_crunch.with_offset.crunch  coords_file_test_no_header.coords  nucmer_test_out.coords  nucmer_test_write_script.sh  nucmer_test_write_script_with_snps.sh  snp_file_test_get_all_variants.snps  snp_file_test_no_header.snps  snp_file_test_with_header.snps
src/pymummer/: __init__.py  alignment.py  coords_file.py  nucmer.py  snp.py  snp_file.py  syscall.py  variant.py
tests/: alignment_test.py  coords_file_test.py  nucmer_test.py  snp_file_test.py  snp_test.py  syscall_test.py  variant_test.py
tests/data/: coords_file_test_convert_to_msp_crunch.no_offset.crunch  coords_file_test_convert_to_msp_crunch.qry.fa  coords_file_test_convert_to_msp_crunch.ref.fa.fai  coords_file_test_with_header.coords  nucmer_test_out.coords.snps  nucmer_test_qry.fa  nucmer_test_ref.fa
